--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
-    "react-toggle-dark-mode": "^1.1.0",
+    "react-spring": "^9.5.5",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,9 +42,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.2.1"
+    "autoprefixer": "^10.4.12"
   }
 }
